06_api_gateway_auth/manifests/02_services.yaml
apiVersion: v1
kind: Service
metadata:
  name: authservice
  labels:
    app: authservice
spec:
  type: ClusterIP
  selector:
    app: authservice
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: profileservice
  labels:
    app: profileservice
spec:
  type: ClusterIP
  selector:
    app: profileservice
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
